Discrete source space

--- a/notebooks/0.04-sources-per-region-exploration.ipynb
+++ b/notebooks/0.04-sources-per-region-exploration.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -26,9 +17,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "No mne attribute transforms",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/carlos/Carlos/cerebra_atlas_python/notebooks/0.04-sources-per-region-exploration.ipynb Cell 2\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/carlos/Carlos/cerebra_atlas_python/notebooks/0.04-sources-per-region-exploration.ipynb#X52sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmne\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/carlos/Carlos/cerebra_atlas_python/notebooks/0.04-sources-per-region-exploration.ipynb#X52sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m mne\u001b[39m.\u001b[39;49mtransforms\n",
+      "File \u001b[0;32m~/anaconda3/envs/phd/lib/python3.10/site-packages/lazy_loader/__init__.py:89\u001b[0m, in \u001b[0;36mattach.<locals>.__getattr__\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m     87\u001b[0m     \u001b[39mreturn\u001b[39;00m attr\n\u001b[1;32m     88\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 89\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNo \u001b[39m\u001b[39m{\u001b[39;00mpackage_name\u001b[39m}\u001b[39;00m\u001b[39m attribute \u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: No mne attribute transforms"
+     ]
+    }
+   ],
+   "source": [
+    "import mne\n",
+    "mne.transforms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "No mne attribute transforms",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/carlos/Carlos/cerebra_atlas_python/notebooks/0.04-sources-per-region-exploration.ipynb Cell 2\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/carlos/Carlos/cerebra_atlas_python/notebooks/0.04-sources-per-region-exploration.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/carlos/Carlos/cerebra_atlas_python/notebooks/0.04-sources-per-region-exploration.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/carlos/Carlos/cerebra_atlas_python/notebooks/0.04-sources-per-region-exploration.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcerebra_atlas_python\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcerebra\u001b[39;00m \u001b[39mimport\u001b[39;00m CerebrA \n\u001b[1;32m      <a href='vscode-notebook-cell:/home/carlos/Carlos/cerebra_atlas_python/notebooks/0.04-sources-per-region-exploration.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcerebra_atlas_python\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mplotting\u001b[39;00m \u001b[39mimport\u001b[39;00m get_cmap_colors,add_grid_to_ax, remove_ax\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/carlos/Carlos/cerebra_atlas_python/notebooks/0.04-sources-per-region-exploration.ipynb#W1sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcerebra_atlas_python\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m setup_logging\n",
+      "File \u001b[0;32m~/anaconda3/envs/phd/lib/python3.10/site-packages/cerebra_atlas_python/cerebra.py:14\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmne\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcerebra_atlas_python\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mconfig\u001b[39;00m \u001b[39mimport\u001b[39;00m BaseConfig\n\u001b[0;32m---> 14\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcerebra_atlas_python\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmni_average\u001b[39;00m \u001b[39mimport\u001b[39;00m MNIAverage\n\u001b[1;32m     15\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcerebra_atlas_python\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m (\n\u001b[1;32m     16\u001b[0m     setup_logging,\n\u001b[1;32m     17\u001b[0m     move_volume_from_lia_to_ras,\n\u001b[1;32m     18\u001b[0m     find_closest_point,\n\u001b[1;32m     19\u001b[0m )\n\u001b[1;32m     20\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcerebra_atlas_python\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mplotting\u001b[39;00m \u001b[39mimport\u001b[39;00m (\n\u001b[1;32m     21\u001b[0m     plot_volume_3d,\n\u001b[1;32m     22\u001b[0m     orthoview,\n\u001b[1;32m     23\u001b[0m     plot_brain_slice_2d,\n\u001b[1;32m     24\u001b[0m     get_cmap_colors_hex,\n\u001b[1;32m     25\u001b[0m )\n",
+      "File \u001b[0;32m~/anaconda3/envs/phd/lib/python3.10/site-packages/cerebra_atlas_python/mni_average.py:18\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcerebra_atlas_python\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mconfig\u001b[39;00m \u001b[39mimport\u001b[39;00m BaseConfig\n\u001b[0;32m---> 18\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mMNIAverage\u001b[39;00m(BaseConfig):\n\u001b[1;32m     19\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[39m    A class for generating and managing MNIAverage Freesurfer surfaces in MNE-Python applications.\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[39m        get_bem_surfaces: Get the surfaces of the boundary element model.\u001b[39;00m\n\u001b[1;32m     46\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m     48\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, config_path\u001b[39m=\u001b[39mop\u001b[39m.\u001b[39mdirname(\u001b[39m__file__\u001b[39m) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/config.ini\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n",
+      "File \u001b[0;32m~/anaconda3/envs/phd/lib/python3.10/site-packages/cerebra_atlas_python/mni_average.py:245\u001b[0m, in \u001b[0;36mMNIAverage\u001b[0;34m()\u001b[0m\n\u001b[1;32m    235\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    236\u001b[0m \u001b[39m    Converts points from MRI (surface RAS) coordinates to RAS coordinates with non-zero origin.\u001b[39;00m\n\u001b[1;32m    237\u001b[0m \u001b[39m    Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    240\u001b[0m \u001b[39m        np.ndarray: Points converted to RAS (non-zero origin) coordinates.\u001b[39;00m\n\u001b[1;32m    241\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m    242\u001b[0m     \u001b[39mreturn\u001b[39;00m mne\u001b[39m.\u001b[39mtransforms\u001b[39m.\u001b[39mapply_trans(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39msrc[\u001b[39m\"\u001b[39m\u001b[39mmri_ras_t\u001b[39m\u001b[39m\"\u001b[39m], pts) \u001b[39m*\u001b[39m \u001b[39m1000\u001b[39m\n\u001b[1;32m    244\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_src_space_ras_nzo\u001b[39m(\n\u001b[0;32m--> 245\u001b[0m     \u001b[39mself\u001b[39m, transform: Optional[mne\u001b[39m.\u001b[39;49mtransforms\u001b[39m.\u001b[39mTransform] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    246\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m np\u001b[39m.\u001b[39mndarray:\n\u001b[1;32m    247\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    248\u001b[0m \u001b[39m    Retrieves the source space coordinates in RAS with non-zero origin, with an optional transformation.\u001b[39;00m\n\u001b[1;32m    249\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    254\u001b[0m \u001b[39m        np.ndarray: The source space coordinates in RAS (non-zero origin).\u001b[39;00m\n\u001b[1;32m    255\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m    256\u001b[0m     src_space \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmri_to_ras_nzo(\n\u001b[1;32m    257\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msrc[\u001b[39m\"\u001b[39m\u001b[39mrr\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m    258\u001b[0m     )  \u001b[39m# Move volume from MRI space to RAS (non-zero origin)\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/phd/lib/python3.10/site-packages/lazy_loader/__init__.py:89\u001b[0m, in \u001b[0;36mattach.<locals>.__getattr__\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m     87\u001b[0m     \u001b[39mreturn\u001b[39;00m attr\n\u001b[1;32m     88\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 89\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNo \u001b[39m\u001b[39m{\u001b[39;00mpackage_name\u001b[39m}\u001b[39;00m\u001b[39m attribute \u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: No mne attribute transforms"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "import numpy as np\n",
