better defined mniaverage scope

--- a/notebooks/0.4-mniAverage-src-intergration.ipynb
+++ b/notebooks/0.4-mniAverage-src-intergration.ipynb
@@ -5045,51 +5045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 56, 101, 107],\n",
-       "       [ 56, 101, 110],\n",
-       "       [ 56, 101, 113],\n",
-       "       ...,\n",
-       "       [197, 125,  98],\n",
-       "       [197, 128,  95],\n",
-       "       [197, 128,  98]])"
-      ]
-     },
-     "execution_count": 205,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 246,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<SourceSpaces: [<discrete, n_used=43498>] MRI (surface RAS) coords, ~2.7 MB>"
-      ]
-     },
-     "execution_count": 246,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cerebra.src_space"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 282,
    "id": "43faaecc",
    "metadata": {},
    "outputs": [
@@ -5097,21 +5053,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " [INFO] 2023-12-07 15:04:06.383 mni_average - __init__: Using data from SUBJECTS_DIR/MNIAverage\n",
-      " [INFO] 2023-12-07 15:04:06.384 mni_average - _set_bem: Loading boundary element model from disk | MNIAverage_bem_0.33_0.0042_0.33_ico_4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " [INFO] 2023-12-07 15:04:06.461 mni_average - _set_vol_src: Reading volume source space from disk\n"
+      " [INFO] 2023-12-07 15:26:50.645 mni_average - __init__: Using data from SUBJECTS_DIR/MNIAverage\n",
+      " [INFO] 2023-12-07 15:26:50.645 mni_average - _set_bem: Loading boundary element model from disk | MNIAverage_bem_0.33_0.0042_0.33_ico_4\n",
+      " [INFO] 2023-12-07 15:26:50.720 mni_average - _set_vol_src: Reading volume source space from disk\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(43498, 3)\n",
+      "(43498, 3)\n",
+      "(43498, 3)\n",
       "<SourceSpaces: [<discrete, n_used=43498>] MRI (surface RAS) coords, ~2.7 MB>\n"
      ]
     },
@@ -5123,7 +5076,7 @@
        "        [<Axes: xlabel='X', ylabel='Y'>, <Axes: >]], dtype=object))"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     },
