--- a/notebooks/0.0-generate-cerebra-data.ipynb
+++ b/notebooks/0.0-generate-cerebra-data.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Notebook setup\n",
     "%load_ext autoreload\n",
@@ -29,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +30,7 @@
     "import logging\n",
     "\n",
     "import mne\n",
-    "import numpy as np\n",
+    "import numpy as npcerebra_in_head_path\n",
     "from mne import bem\n",
     "\n",
     "from cerebra_atlas_python.mni_average import MNIAverage\n",
@@ -88,7 +79,9 @@
     "FIDUCIALS_PATH = op.join(CEREBRA_DATA_SUBJECT_DIR,\"bem/icbm152-fiducials.fif\")\n",
     "INFO_PATH = op.join(CEREBRA_DATA_DIR,\"info.fif\")\n",
     "LABEL_DETAILS_PATH = op.join(CEREBRA_DATA_DIR,\"label_details.csv\")\n",
+    "MRI_RAS_T_PATH = op.join(CEREBRA_DATA_DIR,\"mri_ras-trans.fif\")\n",
     "CEREBRA_VOLUME_PATH = op.join(CEREBRA_DATA_DIR,\"volume.npy\")\n",
+    "CEREBRA_AFFINE_PATH = op.join(CEREBRA_DATA_DIR,\"affine.npy\")\n",
     "MONTAGE_KIND = \"GSN-HydroCel-129\"\n",
     "MONTAGE_HEAD_SIZE = 0.1025"
    ]
@@ -109,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " [INFO] 2023-12-08 00:42:29.867 329260797 - <module>: icbm152 FreeSurfer subject already exists, skipping recon-all\n"
+      " [INFO] 2023-12-13 15:53:53.805 329260797 - <module>: icbm152 FreeSurfer subject already exists, skipping recon-all\n"
      ]
     }
    ],
@@ -142,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " [INFO] 2023-12-08 00:42:29.881 1340249944 - <module>: BEM surfaces for subject icbm152 already exist, skipping make_watershed_bem\n"
+      " [INFO] 2023-12-13 15:53:53.816 1340249944 - <module>: BEM surfaces for subject icbm152 already exist, skipping make_watershed_bem\n"
      ]
     }
    ],
@@ -179,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,14 +295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " [INFO] 2023-12-08 00:42:29.908 4125258872 - <module>: BEM surfaces for subject icbm152 already exist, skipping make_watershed_bem\n"
+      " [INFO] 2023-12-13 15:53:53.839 4125258872 - <module>: BEM surfaces for subject icbm152 already exist, skipping make_watershed_bem\n"
      ]
     }
    ],
@@ -340,14 +333,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " [INFO] 2023-12-08 00:42:29.920 1426419388 - <module>: Fiducials and head to mri transform already exists ../cerebra_atlas_python/cerebra_data/subjects/icbm152/bem/icbm152-fiducials.fif and ../cerebra_atlas_python/cerebra_data/subjects/icbm152/head_mri_t.fif\n"
+      " [INFO] 2023-12-13 15:53:53.849 1426419388 - <module>: Fiducials and head to mri transform already exists ../cerebra_atlas_python/cerebra_data/subjects/icbm152/bem/icbm152-fiducials.fif and ../cerebra_atlas_python/cerebra_data/subjects/icbm152/head_mri_t.fif\n"
      ]
     }
    ],
@@ -364,16 +357,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " [DEBUG] 2023-12-08 00:42:29.934 config - __init__: Value for variable cerebra_data_path not provided in config.ini[MNIAverage]. Defaulting to cerebra_data_path=/home/carlos/Carlos/cerebra_atlas_python/cerebra_atlas_python/cerebra_data\n",
-      " [INFO] 2023-12-08 00:42:29.934 mni_average - _set_bem: Loading boundary element model from disk | MNIAverage_bem_0.33_0.0042_0.33_ico_4\n",
-      " [DEBUG] 2023-12-08 00:42:30.12 mni_average - _set_fiducials: Fiducials coordinate frame: 5 (FIFFV_COORD_MRI)\n"
+      " [DEBUG] 2023-12-13 15:56:24.256 config - __init__: Value for variable cerebra_data_path not provided in config.ini[MNIAverage]. Defaulting to cerebra_data_path=/home/carlos/Carlos/cerebra_atlas_python/cerebra_atlas_python/cerebra_data\n",
+      " [INFO] 2023-12-13 15:56:24.256 mni_average - _set_bem: Loading boundary element model from disk | MNIAverage_bem_0.33_0.0042_0.33_ico_4\n",
+      " [DEBUG] 2023-12-13 15:56:24.339 mni_average - _set_fiducials: Fiducials coordinate frame: 5 (FIFFV_COORD_MRI)\n"
      ]
     },
     {
@@ -386,41 +379,39 @@
        " [ 0.          0.          0.          1.        ]]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "mni_average = MNIAverage()\n",
     "mni_average.head_mri_t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " [DEBUG] 2023-12-08 00:42:30.342 __init__ - _load_stylesheet: Reading QSS file in: :qdarkstyle/dark/darkstyle.qss\n",
-      " [INFO] 2023-12-08 00:42:30.343 __init__ - _load_stylesheet: QSS file successfully loaded.\n",
-      " [DEBUG] 2023-12-08 00:42:30.343 __init__ - _load_stylesheet: Checking patches for being applied.\n",
-      " [INFO] 2023-12-08 00:42:30.343 __init__ - _apply_version_patches: Found version patches to be applied.\n",
-      " [INFO] 2023-12-08 00:42:30.343 __init__ - _apply_application_patches: Found application patches to be applied.\n"
+      " [DEBUG] 2023-12-13 15:56:35.813 __init__ - _load_stylesheet: Reading QSS file in: :qdarkstyle/dark/darkstyle.qss\n",
+      " [INFO] 2023-12-13 15:56:35.818 __init__ - _load_stylesheet: QSS file successfully loaded.\n",
+      " [DEBUG] 2023-12-13 15:56:35.819 __init__ - _load_stylesheet: Checking patches for being applied.\n",
+      " [INFO] 2023-12-13 15:56:35.820 __init__ - _apply_version_patches: Found version patches to be applied.\n",
+      " [INFO] 2023-12-13 15:56:35.821 __init__ - _apply_application_patches: Found application patches to be applied.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<mne.viz.backends._pyvista.PyVistaFigure at 0x7f0f24ea5420>"
+       "<mne.viz.backends._pyvista.PyVistaFigure at 0x7fe583e5a2c0>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +604,7 @@
        "[104 rows x 6 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -839,6 +830,60 @@
     "inspect_img(f\"{CEREBRA_DATA_SUBJECT_DIR}/mri/wm.mgz\")\n",
     "pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: get transforms another way?\n",
+    "vol_src_space_transforms = mne.setup_volume_source_space(\n",
+    "    subject=NEW_SUBJECT_NAME\n",
+    ") \n",
+    "# vol_src_space_transforms.save(VOL_SOURCE_SPACE_TRANSFORMS_PATH)\n",
+    "mri_ras_t = vol_src_space_transforms[0][\"mri_ras_t\"]\n",
+    "mne.write_trans(MRI_RAS_T_PATH,mri_ras_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cerebra_atlas_python.cerebra import get_cerebra_volume\n",
+    "cerebra_ras_volume, cerebra_ras_affine = get_cerebra_volume(\n",
+    "    f\"{CEREBRA_DIR}/CerebrA_in_head.mgz\", f\"{CEREBRA_DATA_SUBJECT_DIR}/mri/wm.mgz\"\n",
+    ")\n",
+    "np.save(CEREBRA_VOLUME_PATH,cerebra_ras_volume)\n",
+    "np.save(CEREBRA_AFFINE_PATH, cerebra_ras_affine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function save at 0x7fa9d0179970>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
