--- a/notebooks/0.0-generate-cerebra-data.ipynb
+++ b/notebooks/0.0-generate-cerebra-data.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -475,8 +475,8 @@
        "      <td>0.0</td>\n",
        "      <td>Empty</td>\n",
        "      <td>0</td>\n",
-       "      <td></td>\n",
-       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>#000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -565,8 +565,8 @@
        "      <td>0.0</td>\n",
        "      <td>White matter</td>\n",
        "      <td>103</td>\n",
-       "      <td></td>\n",
-       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "      <td>#ffdddd</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -575,18 +575,18 @@
        "</div>"
       ],
       "text/plain": [
-       "     Mindboggle ID              Label Name  CerebrA ID hemisphere  cortical  \\\n",
-       "0              0.0                   Empty           0                False   \n",
-       "1           2027.0  Rostral Middle Frontal           1      Right      True   \n",
-       "2            631.0   Vermal lobules VI-VII           2      Right     False   \n",
-       "3           2009.0       Inferior temporal           3      Right      True   \n",
-       "4             58.0          Accumbens Area           4      Right     False   \n",
-       "..             ...                     ...         ...        ...       ...   \n",
-       "99            53.0             Hippocampus          99       Left     False   \n",
-       "100           50.0                 Caudate         100       Left     False   \n",
-       "101          630.0      Vermal lobules I-V         101       Left     False   \n",
-       "102         1031.0           Supramarginal         102       Left      True   \n",
-       "103            0.0            White matter         103                False   \n",
+       "     Mindboggle ID              Label Name  CerebrA ID hemisphere cortical  \\\n",
+       "0              0.0                   Empty           0        NaN      NaN   \n",
+       "1           2027.0  Rostral Middle Frontal           1      Right     True   \n",
+       "2            631.0   Vermal lobules VI-VII           2      Right    False   \n",
+       "3           2009.0       Inferior temporal           3      Right     True   \n",
+       "4             58.0          Accumbens Area           4      Right    False   \n",
+       "..             ...                     ...         ...        ...      ...   \n",
+       "99            53.0             Hippocampus          99       Left    False   \n",
+       "100           50.0                 Caudate         100       Left    False   \n",
+       "101          630.0      Vermal lobules I-V         101       Left    False   \n",
+       "102         1031.0           Supramarginal         102       Left     True   \n",
+       "103            0.0            White matter         103        NaN     <NA>   \n",
        "\n",
        "       color  \n",
        "0    #000000  \n",
@@ -604,7 +604,7 @@
        "[104 rows x 6 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,16 +612,8 @@
    "source": [
     "label_details_path = op.join(CEREBRA_DIR, \"CerebrA_LabelDetails.csv\")\n",
     "processed_label_details = get_label_details(label_details_path)\n",
+    "processed_label_details.to_csv(LABEL_DETAILS_PATH)\n",
     "processed_label_details"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "processed_label_details.to_csv(LABEL_DETAILS_PATH)"
    ]
   },
   {
