changes to notebooks

--- a/notebooks/0.1-visualize-cerebra-data.ipynb
+++ b/notebooks/0.1-visualize-cerebra-data.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,13 +43,14 @@
     "import logging\n",
     "import mne\n",
     "import numpy as np\n",
+    "import nibabel as nib\n",
     "from cerebra_atlas_python.mni_average import MNIAverage\n",
     "from cerebra_atlas_python.utils import inspect_img,setup_logging"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,12 +84,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "setup_logging(\"INFO\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['version',\n",
+       " 'dims',\n",
+       " 'type',\n",
+       " 'dof',\n",
+       " 'goodRASFlag',\n",
+       " 'delta',\n",
+       " 'Mdc',\n",
+       " 'Pxyz_c',\n",
+       " 'tr',\n",
+       " 'flip_angle',\n",
+       " 'te',\n",
+       " 'ti',\n",
+       " 'fov']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1mgz = nib.load(f\"{CEREBRA_DATA_ICBM152_DIR}/mri/T1.mgz\")\n",
+    "# load(f\"{CEREBRA_DATA_ICBM152_DIR}/mri/T1.mgz\")\n",
+    "# inspect_img()\n",
+    "t1mgz.header.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
