--- a/notebooks/2d_example.ipynb
+++ b/notebooks/2d_example.ipynb
@@ -20,7 +20,7 @@
     "import os\n",
     "import sys\n",
     "nb_dir = os.path.split(os.getcwd())[0]\n",
-    "if nb_dir not in sys.path:wm_vox_ras"
+    "if nb_dir not in sys.path"
    ]
   },
   {
