--- a/notebooks/3d_example.ipynb
+++ b/notebooks/3d_example.ipynb
@@ -33,6 +33,173 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "region_bias = np.array([1.5703534e-06, 2.0005900e-06, 1.3143535e-06, 1.5974761e-06,\n",
+    "       1.1252258e-06, 1.6764197e-06, 1.7851547e-06, 1.5025481e-06,\n",
+    "       2.0324189e-06, 2.0699590e-06, 1.1238728e-06, 1.7288635e-06,\n",
+    "       1.9974748e-06, 1.6790809e-06, 1.7119905e-06, 1.8315175e-06,\n",
+    "       2.0356192e-06, 1.1806879e-06, 1.6364706e-06, 1.6820881e-06,\n",
+    "       1.6832394e-06, 1.6531466e-06, 1.8713164e-06, 1.7730272e-06,\n",
+    "       1.4053709e-06, 1.7415919e-06, 1.4701612e-06, 1.5203078e-06,\n",
+    "       1.9416159e-06, 1.5808913e-06, 2.1687383e-06, 1.5748228e-06,\n",
+    "       1.9807819e-06, 1.3837108e-06, 1.5424718e-06, 1.1381718e-06,\n",
+    "       1.7184284e-06, 1.8504546e-06, 1.6069398e-06, 2.0340083e-06,\n",
+    "       1.9674508e-06, 1.1874574e-06, 1.5910779e-06, 1.9859024e-06,\n",
+    "       1.6082264e-06, 1.7800558e-06, 1.8663819e-06, 2.0220320e-06,\n",
+    "       1.0205334e-06, 1.6653055e-06, 1.7294146e-06, 1.7927805e-06,\n",
+    "       1.6424073e-06, 1.8332088e-06, 1.7308563e-06, 1.3682848e-06,\n",
+    "       1.7781285e-06, 1.3521690e-06, 1.4687944e-06, 1.9023008e-06,\n",
+    "       1.5543914e-06, 2.1917863e-06])\n",
+    "# Min max normalize\n",
+    "region_bias = (region_bias - region_bias.min()) / (region_bias.max() - region_bias.min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "region_alpha = region_bias -0.5\n",
+    "region_alpha[region_alpha<0] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_37287/4052951741.py:3: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed two minor releases later. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap(obj)`` instead.\n",
+      "  cmap = cm.get_cmap('turbo')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# turn to plt colors using cmap\n",
+    "import matplotlib.cm as cm\n",
+    "cmap = cm.get_cmap('turbo')\n",
+    "colors = cmap(region_bias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/carlos/Carlos/cerebra_atlas_python/cerebra_atlas_python/cerebra.py:342: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  mask = self.label_details[\"cortical\"].fillna(False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from cerebra_atlas_python.plotting import get_cmap_colors_hex\n",
+    "cortical_colors = [get_cmap_colors_hex()[c_id] for c_id in cerebra.get_cortical_region_ids()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len(highlighted_regions_alphas)= 62 len(xs)= 340\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 254\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 79\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 236\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 60\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 303\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 410\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 194\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 285\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 30\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 139\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 129\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 43\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 129\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 149\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 211\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 443\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 58\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 294\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 120\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 70\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 357\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 335\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 51\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 826\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 207\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 127\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 57\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 397\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 85\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 251\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 340\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 254\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 79\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 236\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 60\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 303\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 410\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 194\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 285\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 30\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 137\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 129\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 43\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 129\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 149\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 211\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 443\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 58\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 294\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 120\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 70\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 357\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 335\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 51\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 826\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 207\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 127\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 57\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 397\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 83\n",
+      "len(highlighted_regions_alphas)= 62 len(xs)= 251\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(<Figure size 640x480 with 1 Axes>,\n",
+       " <Axes3D: xlabel='X (R)', ylabel='Y (A)', zlabel='Z (S)'>)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%matplotlib qt\n",
+    "cerebra.plot_3d(plot_regions=False,plot_highlighted_regions=cerebra.get_cortical_region_ids(),highlighted_regions_alphas=region_alpha,highlighted_region_colors=cortical_colors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cerebra_vol = cerebra.cerebra_volume.copy()\n",
     "cerebra.cerebra_volume[:127,:,:] = 0"
    ]
