--- a/notebooks/0.4-corregistration-example.ipynb
+++ b/notebooks/0.4-corregistration-example.ipynb
@@ -90,13 +90,19 @@
    "outputs": [],
    "source": [
     "if op.exists(INFO_PATH):\n",
-    "    logging.info(\"BEM surfaces for subject %s already exist, skipping make_watershed_bem\", NEW_SUBJECT_NAME)\n",
+    "    logging.info(\n",
+    "        \"BEM surfaces for subject %s already exist, skipping make_watershed_bem\",\n",
+    "        NEW_SUBJECT_NAME,\n",
+    "    )\n",
     "else:\n",
     "    from cerebra_atlas_python.utils import get_standard_montage\n",
+    "\n",
     "    logging.info(\"Creating info file for %s\", NEW_SUBJECT_NAME)\n",
-    "    montage = get_standard_montage(electrode_names,kind=MONTAGE_KIND,head_size=MONTAGE_HEAD_SIZE)\n",
+    "    montage = get_standard_montage(\n",
+    "        electrode_names, kind=MONTAGE_KIND, head_size=MONTAGE_HEAD_SIZE\n",
+    "    )\n",
     "    kept_ch_names = montage.ch_names\n",
-    "    info = mne.create_info(kept_ch_names, 5000, ch_types='eeg', verbose=False)\n",
+    "    info = mne.create_info(kept_ch_names, 5000, ch_types=\"eeg\", verbose=False)\n",
     "    info.set_montage(montage)\n",
     "    info.save(INFO_PATH)"
    ]
@@ -112,8 +118,12 @@
     "if not op.exists(FIDUCIALS_PATH) or not op.exists(HEAD_MRI_T_PATH):\n",
     "    import mne\n",
     "else:\n",
-    "    \n",
-    "    logging.info(\"Fiducials and head to mri transform already exists %s and %s\", FIDUCIALS_PATH, HEAD_MRI_T_PATH)"
+    "\n",
+    "    logging.info(\n",
+    "        \"Fiducials and head to mri transform already exists %s and %s\",\n",
+    "        FIDUCIALS_PATH,\n",
+    "        HEAD_MRI_T_PATH,\n",
+    "    )"
    ]
   },
   {
@@ -122,8 +132,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mne.dig_mri_distances(mni_average.info, mni_average.head_mri_t, mni_average.subject_name).sum()\n",
-    "mne.viz.plot_alignment(bem=mni_average.bem, mri_fiducials=mni_average.fiducials, trans=mni_average.head_mri_t, show_axes=True,dig=True, info = mni_average.info)"
+    "mne.dig_mri_distances(\n",
+    "    mni_average.info, mni_average.head_mri_t, mni_average.subject_name\n",
+    ").sum()\n",
+    "mne.viz.plot_alignment(\n",
+    "    bem=mni_average.bem,\n",
+    "    mri_fiducials=mni_average.fiducials,\n",
+    "    trans=mni_average.head_mri_t,\n",
+    "    show_axes=True,\n",
+    "    dig=True,\n",
+    "    info=mni_average.info,\n",
+    ")"
    ]
   }
  ],
@@ -143,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
